# Non-Rigid-Shape-Correspondence

./: README.md
geometricMedian/: CMakeLists.txt
geometricMedian/src/: QuickTool.cpp  geometricMedian.cpp  karcherMean.cpp  main 2.cpp  main.cpp  orderedlandmarks.cpp
logarithmicMap/: CMakeLists.txt
logarithmicMap/src/: MMP.cpp  checkerMap.cpp  geodesicpath.cpp  karcherMean.cpp
tracinggeodesic/: CMakeLists.txt
tracinggeodesic/src/: MMP.cpp  geodesicpath.cpp  heat-method.cpp  main.cpp  structureTest.cpp
